Added user info section.

--- a/src/main/resources/templates/contacts/all.html
+++ b/src/main/resources/templates/contacts/all.html
@@ -1,7 +1,7 @@
 <th:block th:fragment>
     <div class="container">
         <div class="py-5 text-center">
-         <!--   <th:block th:include="~{contacts/user-data}"/> -->
+       <th:block th:include="~{contacts/user-data}"/>
             <br/>
             <th:block th:include="~{contacts/create}"/>
         </div>
