--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -4,7 +4,7 @@
         <table class="table">
             <thead>
             <tr>
-                <th scope="col">#</th>
+                <th scope="col">&#35;</th>
                 <th scope="col">User</th>
                 <th scope="col">Role</th>
             </tr>
