--- a/src/main/resources/templates/_layouts/index.html
+++ b/src/main/resources/templates/_layouts/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <th:block th:include="~{_shared/head}"/>
 <body>
 <th:block th:include="~{_shared/header}"/>
