--- a/src/main/resources/templates/_shared/header.html
+++ b/src/main/resources/templates/_shared/header.html
@@ -12,13 +12,15 @@
                 <li class="nav-item">
                     <a th:href="@{/}" class="nav-link"> Home</a>
                 </li>
-                <th:block th:unless="${session.user==null}">
-                    <th:block th:if="${session.user.userRole=='MODERATOR'}">
+               <!-- <th:block th:unless="${session.user==null}">-->
+                <th:block sec:authorize="isAuthenticated()">
+                   <!-- <th:block th:if="${session.user!=null} ? ${session.user.userRole=='MODERATOR'}">
                         <th:block th:include="~{_fragments/nav-admin}"/>
-                    </th:block>
+                    </th:block>-->
                     <th:block th:include="~{_fragments/nav-user}"/>
                 </th:block>
-                <th:block th:if="${session.user==null}">
+             <!--   <th:block th:if="${session.user==null}">-->
+                <th:block sec:authorize="isAnonymous()">
                     <th:block th:include="~{_fragments/nav-guest}"/>
                 </th:block>
                 <li class="nav-item">
