Refactoring code for new user roles

--- a/src/main/resources/templates/_shared/header.html
+++ b/src/main/resources/templates/_shared/header.html
@@ -15,7 +15,7 @@
                <!-- <th:block th:unless="${session.user==null}">-->
                 <th:block sec:authorize="isAuthenticated()">
                    <!-- <th:block th:if="${session.user!=null} ? ${session.user.userRole=='MODERATOR'}">-->
-                     <div sec:authorize="hasRole('ROLE_ADMIN')" >
+                     <div sec:authorize="hasRole('ROLE_OWNER')" >
                         <th:block th:include="~{_fragments/nav-admin}"/>
                 </div>
                  <!--    </th:block>-->
