--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -29,6 +29,7 @@
 
         <button type="submit" id="button-edit" class="btn btn-primary">Edit post</button>
     </form>
-            <div class="container">
-                <div class="py-5 text-center">
+            </div>
+                </div >
+
 </th:block>
