Added custom 404 error page

--- a/src/main/resources/templates/posts/details.html
+++ b/src/main/resources/templates/posts/details.html
@@ -8,32 +8,36 @@
                     <p class="card-text">[[${post.description}]]</p>
                     <p class="card-text">Creator: [[${#strings.capitalize(post.creatorUsername)}]]
                         <th:block th:if="${session.user.username!=post.creatorUsername}"><a
-                                th:href="@{/messages/new(name=${post.creatorUsername})}" class="btn btn-primary">Send message</a>
+                                th:href="@{/messages/new(name=${post.creatorUsername})}" class="btn btn-primary">Send
+                            message</a>
                         </th:block>
                     </p>
 
-                <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                        <a th:href="@{/comments/all/{id}(id=${post.id})}" class="btn btn-sm btn-outline-success">Comments</a>
-                    </div>
-                </div>
-                <th:block th:if="${session.user.username == post.creatorUsername}">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <a th:href="@{/posts/edit(id=${post.id})}" class="btn btn-sm btn-outline-warning">Edit</a>
-                            <a th:href="@{/posts/delete(id=${post.id})}"
-                               class="btn btn-sm btn-outline-danger">Delete</a>
+                            <a th:href="@{/comments/all/{id}(id=${post.id})}" class="btn btn-sm btn-outline-success">Comments</a>
                         </div>
                     </div>
-                </th:block>
+                    <th:block th:if="${session.user.username == post.creatorUsername}">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a th:href="@{/posts/edit(id=${post.id})}"
+                                   class="btn btn-sm btn-outline-warning">Edit</a>
+                                <a th:href="@{/posts/delete(id=${post.id})}"
+                                   class="btn btn-sm btn-outline-danger">Delete</a>
+                            </div>
+                        </div>
+                    </th:block>
                     <th:block th:unless="${session.user.username == post.creatorUsername}">
-                    <div sec:authorize="hasRole('ROLE_ADMIN')" class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <a th:href="@{/posts/edit(id=${post.id})}" class="btn btn-sm btn-outline-warning">Edit</a>
-                            <a th:href="@{/posts/delete(id=${post.id})}"
-                               class="btn btn-sm btn-outline-danger">Delete</a>
+                        <div sec:authorize="hasRole('ROLE_ADMIN')"
+                             class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a th:href="@{/posts/edit(id=${post.id})}"
+                                   class="btn btn-sm btn-outline-warning">Edit</a>
+                                <a th:href="@{/posts/delete(id=${post.id})}"
+                                   class="btn btn-sm btn-outline-danger">Delete</a>
+                            </div>
                         </div>
-                    </div>
                     </th:block>
                 </div>
                 <a class="btn btn-primary" th:href="@{/}">Back</a>
