--- a/src/main/resources/templates/contacts/user-data.html
+++ b/src/main/resources/templates/contacts/user-data.html
@@ -1,4 +1,5 @@
 <th:block th:fragment>
+
     <table class="table">
         <thead>
         <tr>
@@ -13,7 +14,7 @@
             <th scope="row"><i style="margin-right: 0.5rem;" class="far fa-user"></i></th>
             <td>[[${#strings.capitalize(user.username)}]]</td>
             <td>[[${#dates.format(user.creationDate,'dd-MM-yyyy HH:mm')}]]</td>
-            <td>[[${#lists.size(contacts)}]]</td>
+            <td>[[${#lists.size(allContacts)}]]</td>
         </tr>
         </tbody>
     </table>
