--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,31 +3,52 @@
         <div class="py-5 text-center">
             <h2>Register</h2>
             <br/>
-            <form th:action="@{/users/register}" th:method="post">
+            <form th:action="@{/users/register}" th:object="${registerUserViewModel}" th:method="post">
                 <div class="form-group">
                     <label for="username-register">User name</label>
-                    <input type="text" class="form-control" name="username" id="username-register"
+                    <input type="text"
+                           class="form-control" th:classappend="${#fields.hasErrors('username')}? 'is-invalid'"
+                           th:field="*{username}" id="username-register"
                            placeholder="User name">
+                    <div class="invalid-feedback"
+                         th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Error
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="email">Email address</label>
-                    <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp"
+                    <input th:classappend="${#fields.hasErrors('email')}? 'is-invalid'" type="email"
+                           class="form-control" th:field="*{email}" id="email" aria-describedby="emailHelp"
                            placeholder="Enter email">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.
                     </small>
+                    <div class="invalid-feedback"
+                         th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="password-register">Password</label>
-                    <input type="password" class="form-control" name="password" id="password-register"
+                    <input th:classappend="${#fields.hasErrors('password')}? 'is-invalid'" type="password"
+                           class="form-control" th:field="*{password}" id="password-register"
                            placeholder="Password">
+                    <div class="invalid-feedback"
+                         th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Error
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="repeat-password">Repeat password</label>
-                    <input type="password" class="form-control" name="repeatPassword" id="repeat-password"
+                    <input th:classappend="${#fields.hasErrors('repeatPassword')}? 'is-invalid'" type="password"
+                           class="form-control" th:field="*{repeatPassword}" id="repeat-password"
                            placeholder="Repeat password">
+                    <div class="invalid-feedback"
+                         th:if="${#fields.hasErrors('repeatPassword')}" th:errors="*{repeatPassword}">Error
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
+        </div>
+
+        <div th:if="${isInvalid}" class="alert alert-danger" role="alert">
+           <p>Invalid user data</p>
         </div>
     </div>
 </th:block>
